# Apriorit-courses

./: .gitignore
Lection1/: homework_ukr 2.docx  lecture_CPPOOP_ukr 2.pptx  summary_ukr (1).docx  ~$mework_ukr 2.docx
Lection1/Factory Method/: CMakeLists.txt  csv_report.cpp  csv_report.h  file.cpp  file.h  files_info.cpp  files_info.h  main.cpp  report.h  report_creator.h  txt_report.cpp  txt_report.h
Lection10/: Multithreading_conspect.docx  Multithreading_homework.docx
Lection10/Multithreading/: CMakeLists.txt  HomeTask.rar  SimpleThreadPool.h  (+2 more)
Lection11/: Inter-process Communication. Home work. ua.docx  Inter-process Communication. Materials. ua 1.docx  Inter-process Communication_ua 1.ppt  ~$ter-process Communication. Home work. ua.docx
Lection11/FileSender/: CMakeLists.txt  client.cpp  fileHandle.cpp  fileHandle.h  server.cpp
Lection2/: Code review (1).pptx  Розбір типових помилок на прикладах Code Review - HomeWork.docx  Розбір типових помилок на прикладах Code Review - Notes.docx
Lection3/: Notes_2024_UA.docx  RAII_Homework_2024_UA.docx  Resources_Management_2024_UA.pptx
Lection4/: Homework_2024.docx  Modern_And_Effective_C++_2024.docx  Modern_And_Effective_C++_2024.pptx  ~$mework_2024.docx
Lection5/: Notes.docx  Unit tests.pptx  homework.txt
Lection6/: Homework.txt  Lecture.docx  QtFrameworkSlides.pptx
Lection7/: QML підсумок.docx  Qt Framework. Desktop _ mobile GUI via QML.pptx  Qt _ Android.docx  Завдання.docx
Lection8/: HW_macos_ua.docx  home task.swift  macOSDevelopment_ua.pptx  Розробка  під macOS.Нотатки.docx
Lection9/: homework.rar
(+107 files in other folders)
